--- a/turbo.json
+++ b/turbo.json
@@ -1,16 +1,19 @@
 {
     "$schema": "https://turbo.build/schema.json",
     "tasks": {
-        "build": {
+      "build": {
         "dependsOn": ["^build"],
         "outputs": ["dist/**"]
-        },
-        "dev": {
-        "cache": false,
-        "persistent": true
-        },
-        "lint": {
+      },
+      "dev": {
+        "persistent": true,
+        "cache": false
+      },
+      "lint": {
         "dependsOn": ["^lint"]
-        }
+      },
+      "check-types": {
+        "dependsOn": ["^check-types"]
+      }
     }
 }
