Update .env.example and Prisma configuration for MySQL integration
- Removed MySQL user and password from .env.example for security.
- Updated DATABASE_URL to use root credentials for development.
- Cleaned up comments in prisma.config.ts and schema.prisma.
- Changed database provider in schema.prisma from PostgreSQL to MySQL.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
 # MySQL (Docker Compose)
 MYSQL_ROOT_PASSWORD=rootpassword
 MYSQL_DATABASE=kotsutsumi
-MYSQL_USER=kotsutsumi
-MYSQL_PASSWORD=kotsutsumi
 
-# Database URL (for Prisma)
-DATABASE_URL="mysql://kotsutsumi:kotsutsumi@localhost:3306/kotsutsumi"
+# Database URL (for Prisma) - 開発環境では root を使用（シャドウDB作成権限が必要）
+DATABASE_URL="mysql://root:rootpassword@localhost:3306/kotsutsumi"
