feat: Add CI workflow and update package scripts
- Introduced a new CI workflow in GitHub Actions for linting, type checking, building, and testing.
- Added "test" script to package.json files for the main project, API, and web applications.
- Updated "check-types" script in the main project and API to ensure type safety during CI.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "check-types": "tsc --noEmit",
+    "test": "echo \"No tests yet\"",
     "preview": "vite preview"
   },
   "dependencies": {
