--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,9 @@
       },
       "check-types": {
         "dependsOn": ["^check-types"]
+      },
+      "test": {
+        "dependsOn": ["^build"]
       }
     }
 }
