feat: Add Prettier configuration and format scripts
- Introduced a new Prettier configuration file to standardize code formatting.
- Added format and format:check scripts to package.json for the main project, API, and web applications.
- Updated CI workflow to include a format check step.
- Updated pnpm-lock.yaml to include Prettier as a dependency.
- Removed outdated Prettier configuration from the API application.

--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,10 @@
       "lint": {
         "dependsOn": ["^lint"]
       },
+      "format": {
+        "cache": false
+      },
+      "format:check": {},
       "check-types": {
         "dependsOn": ["^check-types"]
       },
